--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+title: Lean He
+#logo
+description: Data Scientist | Statistical Analysis | Business Intelligence 
+#show_downloads: true
+theme: jekyll-theme-cayman
