--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Lean He
 #logo
 description: Data Scientist | Statistical Analysis | Business Intelligence 
 #show_downloads: true
-theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
