--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Lean He
-#logo
+logo: docs/assets/LC.JPG
 description: Data Scientist | Statistical Analysis | Business Intelligence 
 #show_downloads: true
 theme: jekyll-theme-minimal
