--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,20 @@
 title: Lean He
 logo: docs/assets/LC.JPG
 description: >
-  Data Scientist | BI Engineer 
-  <br><br>
-  <a href="mailto:leanhe1201@gmail.com" title="Email">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mail_%28iOS%29.svg" width="24" />
-  </a> Email
-  <br><br>
-  <a href="https://www.linkedin.com/in/lean-he/" target="_blank">
-    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" width="24" />
-  </a> LinkedIn
-  <br><br>
-  <a href="https://github.com/mangoann" target="_blank">
-    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" width="24" />
-  </a> Github
+  Data Scientist | BI Engineer  
+  <br>
+  <a href="mailto:leanhe1201@gmail.com" style="text-decoration: none; color: inherit;">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Mail_%28iOS%29.svg" style="width:16px; height:16px; vertical-align: text-bottom; margin-right: 4px;" />
+    Email
+  </a>
+  <br>
+  <a href="https://www.linkedin.com/in/lean-he/" target="_blank" style="text-decoration: none; color: inherit;">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" style="width:16px; height:16px; vertical-align: text-bottom; margin-right: 4px;" />
+    LinkedIn
+  </a>
+  <br>
+  <a href="https://github.com/mangoann" target="_blank" style="text-decoration: none; color: inherit;">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" style="width:16px; height:16px; vertical-align: text-bottom; margin-right: 4px;" />
+    GitHub
+  </a>
 theme: jekyll-theme-minimal
